# ansible-keycloak

./: .gitignore  .travis.yml  README.md  setup.cfg  test-requirements.txt  tls-cert-key.yml  tls-pkcs12.yml  tls-self-signed.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  INSTALL.rst  molecule.yml  playbook.yml
roles/keycloak/defaults/: main.yml
roles/keycloak/files/: py3test.py
roles/keycloak/molecule/default/: playbook.yml  yaml-lint.yml
roles/keycloak/tasks/: main.yml
roles/keycloak/templates/: standalone-tls-config.cli.j2
tasks/: main.yml  python_2_3_test.yml
templates/: keycloak-proxy-fwd.cli.j2  keycloak-socket-binding.cli.j2  keycloak-sysconfig.j2  keycloak.service.j2  standalone-tls-config.cli.j2
tests/: test.yml
vars/: main.yml
