[metadata]
name = ansible-keycloak
summary = Deploy Keycloak server
description-file =
    README.md
author = Nathan Kinder
author-email = nkinder.redhat.com
home-page = https://github.com/nkinder/ansible-keycloak
classifier =
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/ansible-keycloak/defaults = defaults/*
    usr/local/share/ansible/roles/ansible-keycloak/files = files/*
    usr/local/share/ansible/roles/ansible-keycloak/handlers = handlers/*
    usr/local/share/ansible/roles/ansible-keycloak/meta = meta/*
    usr/local/share/ansible/roles/ansible-keycloak/tasks = tasks/*
    usr/local/share/ansible/roles/ansible-keycloak/templates = templates/*

[pbr]
skip_authors = True
skip_changelog = True
