[metadata]
name = nkinder.keycloak
summary = Deploy Keycloak server
description-file =
    README.md
author = Nathan Kinder
author-email = nkinder.redhat.com
home-page = https://github.com/nkinder/ansible-keycloak
classifier =
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/nkinder.keycloak/defaults = defaults/*
    usr/local/share/ansible/roles/nkinder.keycloak/files = files/*
    usr/local/share/ansible/roles/nkinder.keycloak/handlers = handlers/*
    usr/local/share/ansible/roles/nkinder.keycloak/meta = meta/*
    usr/local/share/ansible/roles/nkinder.keycloak/tasks = tasks/*
    usr/local/share/ansible/roles/nkinder.keycloak/templates = templates/*

[pbr]
skip_authors = True
skip_changelog = True
